--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Hi-tech companies in Israel" />
         <meta name="keywords" content="hi-tech, Israel" />
         <link rel="stylesheet" href="/html/style.css">
-        <title>Silicon Wadi: Hi-tech companies in Israel</title>
+        <title>Hi-tech companies in Israel</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="/html/map.js"></script>
 </head>
