filter markers based on technology

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 
 <div id="map"></div>
 
+Filter to Technology used: <select id="technology"></select> <button id="show">Show</button>
+
 <h1>Hi-tech companies in Israel</h1>
 Data is available in <a href="https://github.com/szabgab/silicon-wadi">this GitHub</a> repository. Pull-Requests are welcome!
 
