--- a/index.html
+++ b/index.html
@@ -20,5 +20,17 @@ Data is available in <a href="https://github.com/szabgab/silicon-wadi">this GitH
 
 <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAiIfINoUK693BwVePYo6lCCGfp695hi7U&callback=initMap"></script>
 
+
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-12199211-33', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 </body>
 </html>
