--- a/html/index.html
+++ b/html/index.html
@@ -4,6 +4,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/> 
         <meta name="description" content="Hi-tech companies in Israel" />
         <meta name="keywords" content="hi-tech, Israel" />
+        <link rel="shortcut icon" href="/favicon.ico" />
         <link rel="stylesheet" href="/html/style.css">
         <title>Hi-tech companies in Israel</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
