--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="/html/style.css">
         <title>Hi-tech companies in Israel</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-        <script type="text/javascript" src="/html/map.js"></script>
+        <script type="text/javascript" src="/map.js"></script>
 </head>
 <body>
 
