--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
         <meta name="description" content="Hi-tech companies in Israel" />
         <meta name="keywords" content="hi-tech, Israel" />
         <link rel="shortcut icon" href="/favicon.ico" />
-        <link rel="stylesheet" href="/html/style.css">
+        <link rel="stylesheet" href="/style.css">
         <title>Hi-tech companies in Israel</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
         <script type="text/javascript" src="/map.js"></script>
