show error message if companies.json is missing

--- a/html/index.html
+++ b/html/index.html
@@ -13,6 +13,7 @@
 <body>
 
 <div id="map"></div>
+<div id="error">Missing companies.json</div>
 
 Filter to Technology used: <select id="technology"></select> <button id="show">Show</button>
 
