--- a/html/index.html
+++ b/html/index.html
@@ -22,6 +22,9 @@ Data is available in <a href="https://github.com/szabgab/silicon-wadi">this GitH
 
 <script async defer src="http://maps.googleapis.com/maps/api/js?key=AIzaSyAiIfINoUK693BwVePYo6lCCGfp695hi7U&callback=initMap"></script>
 
+<h2>List of companies</h2>
+Total number of companies: <span id="count-companies"></span>
+<div id="list"></div>
 
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
